--- a/style/table-style.css
+++ b/style/table-style.css
@@ -1,14 +1,16 @@
-*{
+* {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
-body{
+
+body {
     font-family: Helvetica;
     -webkit-font-smoothing: antialiased;
     background: rgb(255, 255, 255);
 }
-h2{
+
+h2 {
     text-align: center;
     font-size: 18px;
     text-transform: uppercase;
@@ -19,9 +21,10 @@ h2{
 
 /* Table Styles */
 
-.table-wrapper{
+.table-wrapper {
     margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+    
+
 }
 
 .fl-table {
@@ -34,9 +37,12 @@ h2{
     max-width: 100%;
     white-space: nowrap;
     background-color: white;
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+
 }
 
-.fl-table td, .fl-table th {
+.fl-table td,
+.fl-table th {
     text-align: center;
     padding: 8px;
 }
@@ -66,27 +72,27 @@ h2{
 
 /* button style */
 .button1 {
-  appearance: none;
-  border: 1px solid rgba(27, 31, 35, .15);
-  border-radius: 6px;
-  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  padding: 6px 16px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: middle;
-  white-space: nowrap;
+    appearance: none;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
 }
 
 
@@ -105,43 +111,49 @@ h2{
 }
 
 
+
+
 .button1:focus:not(:focus-visible):not(.focus-visible) {
-  box-shadow: none;
-  outline: none;
+    box-shadow: none;
+    outline: none;
 }
 
 .delete:hover {
-  background-color: #972c2c;
+    background-color: #972c2c;
 }
 
 .edit:hover {
     background-color: #2c6097;
-  }
+}
 
-  .create:hover {
+.create:hover {
     background-color: #4c972c;
-  }
+}
+
+
 
 .delete:focus {
-  box-shadow: rgba(164, 46, 46, 0.4) 0 0 0 3px;
-  outline: none;
+    box-shadow: rgba(164, 46, 46, 0.4) 0 0 0 3px;
+    outline: none;
 }
 
 .edit:focus {
     box-shadow: rgba(46, 91, 164, 0.4) 0 0 0 3px;
     outline: none;
-  }
+}
 
-  .edit:focus {
+.create:focus {
     box-shadow: rgba(77, 164, 46, 0.4) 0 0 0 3px;
     outline: none;
-  }
+}
+
+
 
 .delete:disabled {
-  background-color: #d39494;
-  border-color: rgba(27, 31, 35, .1);
-  color: rgba(255, 255, 255, .8);
-  cursor: default;
+    background-color: #d39494;
+    border-color: rgba(27, 31, 35, .1);
+    color: rgba(255, 255, 255, .8);
+    cursor: default;
 }
 
 .edit:disabled {
@@ -149,52 +161,64 @@ h2{
     border-color: rgba(27, 31, 35, .1);
     color: rgba(255, 255, 255, .8);
     cursor: default;
-  }
+}
 
-  .create:disabled {
+.create:disabled {
     background-color: #a1d394;
     border-color: rgba(27, 31, 35, .1);
     color: rgba(255, 255, 255, .8);
     cursor: default;
-  }
+}
+
+
 
 .delete:active {
-  background-color: #8e2929;
-  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+    background-color: #8e2929;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
 
 .edit:active {
     background-color: #295a8e;
     box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
-  }
+}
 
-  .create:active {
+.create:active {
     background-color: #3f8e29;
     box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
-  }
+}
 
 
 
-   /* Modal container */
-   .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+
+/* Modal container */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
 
 /* Modal content */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
+    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
+    /* Could be more or less, depending on screen size */
 }
 
 /* Close button */
@@ -212,6 +236,10 @@ h2{
     cursor: pointer;
 }
 
+
+
+
+
 /* Responsive */
 
 @media (max-width: 767px) {
@@ -219,7 +247,8 @@ h2{
         display: block;
         width: 100%;
     }
-    .table-wrapper:before{
+
+    .table-wrapper:before {
         content: "Scroll horizontally >";
         display: block;
         text-align: right;
@@ -227,21 +256,29 @@ h2{
         color: white;
         padding: 0 0 10px;
     }
-    .fl-table thead, .fl-table tbody, .fl-table thead th {
+
+    .fl-table thead,
+    .fl-table tbody,
+    .fl-table thead th {
         display: block;
     }
-    .fl-table thead th:last-child{
+
+    .fl-table thead th:last-child {
         border-bottom: none;
     }
+
     .fl-table thead {
         float: left;
     }
+
     .fl-table tbody {
         width: auto;
         position: relative;
         overflow-x: auto;
     }
-    .fl-table td, .fl-table th {
+
+    .fl-table td,
+    .fl-table th {
         padding: 20px .625em .625em .625em;
         height: 60px;
         vertical-align: middle;
@@ -252,26 +289,33 @@ h2{
         font-size: 13px;
         text-overflow: ellipsis;
     }
+
     .fl-table thead th {
         text-align: left;
         border-bottom: 1px solid #f7f7f9;
     }
+
     .fl-table tbody tr {
         display: table-cell;
     }
+
     .fl-table tbody tr:nth-child(odd) {
         background: none;
     }
+
     .fl-table tr:nth-child(even) {
         background: transparent;
     }
+
     .fl-table tr td:nth-child(odd) {
         background: #F8F8F8;
         border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tr td:nth-child(even) {
         border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tbody td {
         display: block;
         text-align: center;
